compiler/test/integration/occurs.err
TypeError in [test/integration/occurs.brm:1.8-1.17]: I32 -> ^g__0 is not a subtype of ^g__0
because TypeError in [test/integration/occurs.brm:1.8-1.17]: Occurs check: unifying ^g__0 with I32 -> ^g__0 would create infinite type.
TypeError in [test/integration/occurs.brm:1.8-1.17]: I32 -> ^g__0 is not a subtype of ^g__0
because TypeError in [test/integration/occurs.brm:1.8-1.17]: Occurs check: unifying ^g__0 with I32 -> ^g__0 would create infinite type.
