compiler/test/integration/occurs.brm
fun foo (_: int) = foo

